# moodle-csv-import

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
uploads/: 68b829d294d9f8.83978021Cadastro_de_usuarios_no_MOODLE.xlsx  processado_68b829d294d9f8.83978021Cadastro_de_usuarios_no_MOODLE_1.csv
